--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		</p>
 		<p></p>
 		<p>
-			<button id="button" class="button" onclick="results()">Tallenna</button>
+			<button id="button" class="button" onclick="save()">Tallenna</button>
 		</p>
 	</div>
 	<div id="tabs-3">
@@ -108,9 +108,11 @@
 		range: "min",
         animate: true,
      });
-	var chart = createAverageChart();
-	chart.render();
-	showPearson();
+     if (tab == 2) {
+		var chart = createAverageChart();
+		chart.render();
+		showPearson();
+	}
 	$( document ).ready(function() {
 		if (action == 'save') {
 			document.location.href = 'index.jss?tab=2';
