--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 			mainPage()
 		}
 	});
+	initProducts();
+	$('#resultProduct').change(function() {
+		currentProduct =  $('#resultProduct').val();
+		searchResult(currentProduct);
+	});
 			
 		
 </script>
