Terms in english

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<ul>
 		<li><a href="#tabs-1">Login</a></li> 
 		<li><a href="#tabs-2">Main page</a></li> 
-		<li><a href="#tabs-3">Own nose</a></li>
+		<li><a href="#tabs-3">My nose</a></li>
 		<li><a href="#tabs-4">Results</a></li>
 	</ul>
 	<div id="tabs-1">
@@ -35,7 +35,7 @@
 	</div>
 	<div id="tabs-2">
 		<p>
-		<a href="javascript:showArvostelu()">Evaluate a Viski</a>
+		<a href="javascript:showArvostelu()">Evaluate a Whisky</a>
 		</p>
 		<p>
 		<a href="javascript:showCurrentResult()">Show results</a>
@@ -43,39 +43,39 @@
 	</div>
 	<div id="tabs-3">
 		<p>
-			<h2 class="demoHeaders">Choose a viski</h2>
+			<h2 class="demoHeaders">Choose a Whisky</h2>
 			<select id="product">
 			</select>
 		</p>
 		<p>
-			  <h4>Savuisuus</h4>
+			  <h4>Smokiness</h4>
 			  <h4 align="left">0 %</h4>
 			  <h4 align="right">100 %</h4>
 
 			  <div id="savuisuus" class="evaluation" id="coloredSlider"></div>
 		</p>
 		<p>
-			  <h4>Vaniljaisuus</h4>
+			  <h4>Vanillin</h4>
 			  <div id="vaniljaisuus" class="evaluation"></div>
 		 </p>
 		<p>
-			  <h4>Kukkaisuus</h4>
+			  <h4>Floral</h4>
 			  <div id="kukkaisuus" class="evaluation"></div>
 		</p>
 		<p>
-			  <h4>Mausteisuus</h4>
+			  <h4>Spiciness</h4>
 			  <div id="mausteisuus" class="evaluation"></div>
 		</p>
 		<p>
-			  <h4>Maltaisuus</h4>
+			  <h4>Maltiness</h4>
 			  <div id="maltaisuus" class="evaluation"></div>
 		</p>		
 		<p>
-			  <h4>Makeus</h4>
+			  <h4>Sweetness</h4>
 			  <div id="makeus" class="evaluation"></div>
 		</p>		
 		<p>
-			  <h4>Miellyttavyys</h4>
+			  <h4>Amenity</h4>
 			  <div id="miellyttavyys" class="evaluation"></div>
 		</p>
 		<p></p>
