--- a/index.html
+++ b/index.html
@@ -47,36 +47,53 @@
 			<select id="product">
 			</select>
 		</p>
+		<p style="text-align:left;">0 %
+			<span style="float:right;">100 %</span>
+		</p> 
 		<p>
 			  <h4>Smokiness</h4>
-			  <h4 align="left">0 %</h4>
-			  <h4 align="right">100 %</h4>
-
-			  <div id="savuisuus" class="evaluation" id="coloredSlider"></div>
+			  <div id="savuisuus" class="evaluation">
+					<div id="savuisuus-handle" class="ui-slider-handle"></div>
+			  </div>
 		</p>
 		<p>
 			  <h4>Vanillin</h4>
-			  <div id="vaniljaisuus" class="evaluation"></div>
+			  <div id="vaniljaisuus" class="evaluation">
+				<div id="vaniljaisuus-handle" class="ui-slider-handle"></div>
+			  </div>
 		 </p>
 		<p>
 			  <h4>Floral</h4>
-			  <div id="kukkaisuus" class="evaluation"></div>
+			  <div id="kukkaisuus" class="evaluation">
+				<div id="kukkaisuus-handle" class="ui-slider-handle"></div>
+			  </div>
 		</p>
 		<p>
 			  <h4>Spiciness</h4>
-			  <div id="mausteisuus" class="evaluation"></div>
+			  <div id="mausteisuus" class="evaluation">
+			  	<div id="mausteisuus-handle" class="ui-slider-handle"></div>
+			  </div>
 		</p>
 		<p>
 			  <h4>Maltiness</h4>
-			  <div id="maltaisuus" class="evaluation"></div>
+			  <div id="maltaisuus" class="evaluation">
+			  	<div id="maltaisuus-handle" class="ui-slider-handle"></div>
+			  </div>
 		</p>		
 		<p>
 			  <h4>Sweetness</h4>
-			  <div id="makeus" class="evaluation"></div>
+			  <div id="makeus" class="evaluation">
+			  	<div id="makeus-handle" class="ui-slider-handle"></div>
+			  </div>
 		</p>		
 		<p>
-			  <h4>Amenity</h4>
-			  <div id="miellyttavyys" class="evaluation"></div>
+			  <h4>Pleasantness</h4>
+			  <div id="miellyttavyys" class="evaluation">
+				<div id="miellyttavyys-handle" class="ui-slider-handle"></div>
+			  </div>
+		</p>
+		<p style="text-align:left;">0 %
+			<span style="float:right;">100 %</span>
 		</p>
 		<p></p>
 		<p>
